--- a/ssm-manager/pom.xml
+++ b/ssm-manager/pom.xml
@@ -21,6 +21,9 @@
   </modules>
   	<build>
 		<resources>
+			<resource>  
+				<directory>src/main/resources</directory>  
+			</resource> 
 			<resource>
 				<directory>src/main/java</directory>
 				<includes>
