--- a/pom.xml
+++ b/pom.xml
@@ -73,10 +73,11 @@
 	    <version>5.1.5.RELEASE</version>
 	</dependency>
 
-	<dependency>  
-	    <groupId>org.springframework</groupId>  
-	    <artifactId>spring-test</artifactId>  
-	    <version>3.1.1.RELEASE</version>  
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-test</artifactId>
+	    <version>5.1.1.RELEASE</version>
 	</dependency>
 
 	<!-- https://mvnrepository.com/artifact/aopalliance/aopalliance -->
@@ -121,11 +122,14 @@
 	    <version>1.3.1</version>
 	</dependency>
 
+	<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
 	<dependency>
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>javax.servlet-api</artifactId>
-	    <version>3.0.1</version>
+	    <version>3.1.0</version>
+	    <scope>provided</scope>
 	</dependency>
+
 	
 	<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 	<dependency>
@@ -149,6 +153,26 @@
 	    <version>3.0.1</version>
 	</dependency>
 
+	<!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-core -->
+	<dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-core</artifactId>
+	    <version>1.4.0</version>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-web -->
+	<dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-web</artifactId>
+	    <version>1.2.3</version>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-spring -->
+	<dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-spring</artifactId>
+	    <version>1.4.0</version>
+	</dependency>
 
   </dependencies>
 </project>
