--- a/ssm-manager/pom.xml
+++ b/ssm-manager/pom.xml
@@ -21,15 +21,19 @@
   </modules>
   	<build>
 		<resources>
-			<resource>  
-				<directory>src/main/resources</directory>  
-			</resource> 
 			<resource>
 				<directory>src/main/java</directory>
 				<includes>
 					<include>**/*.xml</include>
 				</includes>
 			</resource>
+			<resource>  
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/*.xml</include>
+					<include>**/*.properties</include>
+				</includes>
+			</resource> 
 		</resources>
 	</build>
 </project>
